<resources>

    <string name="app_name">sapore</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="btnped">Pedido pizza</string>
    <string name="btncadbebida">Pedido bebidas</string>
    <string name="numMesa"></string>
    <string name="mesa">mesa</string>
    <string name="tamanho">tamanho</string>
    <string name="m">m</string>
    <string name="p">p</string>
    <string name="borda">borda</string>
    <string name="cauperi">catuperi</string>
    <string name="chedder">chedder</string>
    <string name="sem">sem</string>
    <string name="g">g</string>
    <string name="sabor1">sabor 1</string>
    <string name="sabor2">sabor 2</string>
    <string name="saborcaixa1"></string>
    <string name="saborcaixa2"/>
    <string name="sabor3">sabor 3</string>
    <string name="obs">observações</string>
    <string name="sp_obs"/>
    <string name="obstxt"/>
    <string name="cadastrarpedido">Finalizar pedido</string>
    <string name="btnmesa">cadastrar mesa</string>
    <string name="btcadmesa">cadastrar mesa</string>
    <string name="btnMesaMain">cadastrar mesa</string>
    <string name="botaoCadPizza">Cadastrar pedido</string>
    

</resources>