<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.74" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/CadPizzaMesaTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:paddingTop="10dp"
                android:text="@string/mesa"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <Spinner
                android:id="@+id/cadNumMesa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:text="@string/tamanho"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <RadioGroup
                android:id="@+id/radioGroup1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/cadTamanhoUm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:checked="true"
                    android:paddingRight="10dp"
                    android:text="@string/p" />

                <RadioButton
                    android:id="@+id/cadTamanhoDois"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="10dp"
                    android:text="@string/m" />

                <RadioButton
                    android:id="@+id/cadTamanhoTres"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/g" />
            </RadioGroup>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:paddingTop="10dp"
                android:text="@string/borda"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <RadioGroup
                android:id="@+id/radioGroup2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/cadBordaUm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:checked="true"
                    android:text="@string/cauperi" />

                <RadioButton
                    android:id="@+id/cadBordaDois"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chedder" />

                <RadioButton
                    android:id="@+id/cadBordaTres"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sem" />
            </RadioGroup>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:paddingTop="15dp"
                android:text="@string/sabor1"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <Spinner
                android:id="@+id/cadSaborUm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:text="@string/sabor2"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <Spinner
                android:id="@+id/cadSaborDois"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:text="@string/sabor3"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <Spinner
                android:id="@+id/cadSabortres"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:text="@string/obs"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <Spinner
                android:id="@+id/cadObs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/cadTxtObs"
                android:layout_width="match_parent"
                android:layout_height="63dp"
                android:ems="10"
                android:inputType="text"
                android:text="@string/obstxt" >

                <requestFocus />
            </EditText>

            <Button
                android:id="@+id/btnCadPedPiz"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/botaoCadPizza" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>