<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/scrollView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.74" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/CadMesaTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:paddingTop="10dp"
                android:text="@string/mesa"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/cadMesatxt"
                android:layout_width="match_parent"
                android:layout_height="63dp"
                android:ems="10"
                android:inputType="text"
                android:text="@string/obstxt" >

                <requestFocus />
            </EditText>

            <Button
                android:id="@+id/btnCadMesa"
                android:layout_width="775dp"
                android:layout_height="wrap_content"
                android:text="@string/btnmesa" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>